--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,19 @@
-$font-stack: Helvetica,
-"sans-serif";
-$primary-color: #333;
-$navbarColor: yellow;
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&display=swap');
+
+
 
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: roboto, sans-serif;
     // border: 1px solid;
 }
 
 body {
-    height: 100vh;
+    // height: 100vh;
+    background-color: rgb(255, 251, 251);
 }
 
 //functions
@@ -34,46 +35,236 @@ body {
 
 
 //Navbar
-nav {
-    position: fixed;
-    display: inline;
-    bottom: 0;
-    right: 0;
-    height: 40vh;
-    width: 55vw;
-    border-radius: 100% 0 0 0;
-}
 
-.toggle-btn {
-    padding: 1rem;
-    position: absolute;
-    bottom: 1rem;
-    right: 1rem;
-    background-color: black;
-    border-radius: 50%;
-}
+@include mq-min(576px) {
+    .toggle {
+        display: none;
+    }
 
-.nav-links {
-    position: relative;
-    top: 3rem;
+    .nav-links {
+        height: 4rem;
+        width: 100%;
+        display: flex !important;
+        justify-content: center;
+        background-color: #daedfb;
+        // box-shadow: 0 0 7px grey;
 
-    ul {
-        text-align: end;
-        padding-right: 1rem;
+        ul {
+            display: flex;
+            padding: 0.75rem;
+            align-self: center;
 
-        li {
-            padding: 1rem;
-            list-style: none;
+            li {
+                padding: 0 1rem;
+                list-style: none;
 
-            a {
-                text-decoration: none;
-                color: white;
+                a {
+                    color: black;
+                    text-decoration: none;
+                    font-size: 1.25rem;
+                    font-weight: 600;
+                }
             }
         }
     }
 }
 
-.fa-solid {
-    font-size: 2rem;
-    color: white;
+@include mq-max(576px) {
+    nav {
+        position: fixed;
+        display: inline;
+        bottom: 0;
+        right: 0;
+        height: 40vh;
+        width: 70vw;
+        border-radius: 100% 0 0 0;
+        z-index: 100;
+        transition: all 0.5s ease-in-out 0s;
+    }
+
+    .toggle-btn {
+        padding: 1rem;
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
+        background-color: black;
+        border-radius: 50%;
+    }
+
+    .nav-links {
+        position: relative;
+        top: 3rem;
+
+        ul {
+            text-align: end;
+            padding-right: 1rem;
+
+            li {
+                padding: 1rem;
+                list-style: none;
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
+            }
+        }
+    }
+
+    .navbar-icon {
+        font-size: 1.5rem;
+        color: white;
+    }
+
+}
+
+// Banner
+
+.banner {
+    height: 20rem;
+    background-image: url("../assests/Asset3.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #daedfb;
+}
+
+// Card
+.project-title {
+    text-align: center;
+    margin: 5rem auto 3rem auto;
+    text-decoration: underline;
+}
+
+.card-frame {
+    margin: 3rem 8rem;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    row-gap: 5rem;
+
+    @include mq-max(576px) {
+        margin: 4rem auto;
+        justify-content: center;
+    }
+
+
+}
+
+.card-container {
+    height: 25rem;
+    width: 22rem;
+    background-color: white;
+    border-radius: 1rem;
+    background-color: #daedfb;
+
+    &:hover {
+        box-shadow: 0 0 10px grey;
+        transform: scale(1.01, 1.01);
+        transition: transform 500ms ease 0s;
+    }
+
+    @include mq-max(576px) {
+        height: 24rem;
+        width: 18rem;
+    }
+
+
+    img {
+        width: 100%;
+        height: 12rem;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+
+        @include mq-max(576px) {
+            border: 1px solid;
+        }
+
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    i {
+        font-size: 1.5rem;
+        transform: translateY(-56%);
+        border: 10px solid #daedfb;
+        border-radius: 50%;
+        width: 4rem;
+        height: 4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #b4dffe;
+        color: #2781c0;
+        margin: auto;
+
+        &:hover {
+            background-color: #2781c0;
+            color: #b4dffe;
+            transition: all 0.5s ease 0s;
+        }
+
+        @include mq-max(576px) {
+            font-size: 1.5rem;
+            border: 8px solid #daedfb;
+            width: 4rem;
+            height: 4rem;
+        }
+    }
+
+    .card-title {
+        text-align: center;
+        margin-top: -2rem;
+        font-size: 1.5rem;
+
+        @include mq-max(576px) {
+            font-size: 1.5rem;
+        }
+    }
+
+    .skills {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 2.5rem;
+        margin-bottom: 2rem;
+
+        @include mq-max(576px) {
+            margin: 0 1rem;
+            margin-top: 2.5rem;
+        }
+
+        p {
+            font-size: 0.8rem;
+            padding: 0.5rem;
+            background-color: #dae2ec;
+            border-radius: 1rem;
+
+
+            @include mq-max(576px) {
+                padding: 0.5rem;
+            }
+
+
+        }
+
+    }
+
+    .card-footer {
+        display: flex;
+        justify-content: space-around;
+        background-color: #b4dffe;
+        margin-top: 1.4rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+
+        a {
+            padding: 0.75rem;
+            text-decoration: none;
+            color: black;
+
+        }
+    }
+
 }
