--- a/sass/main.scss
+++ b/sass/main.scss
@@ -154,28 +154,30 @@ body {
 .card-container {
     height: 25rem;
     width: 22rem;
-    background-color: white;
+    background-color: #b4dffe;
     border-radius: 1rem;
-    background-color: #daedfb;
+    overflow: hidden;
+
 
     &:hover {
-        box-shadow: 0 0 10px #2781c0;
+        box-shadow: 0 10px 10px grey;
         transform: scale(1.01, 1.01);
         transition: transform 500ms ease 0s;
     }
 
     @include mq-max(576px) {
-        height: 24rem;
+        height: 24.5rem;
         width: 18rem;
     }
 
 
     img {
-        width: 100%;
-        height: 12rem;
-        border-top-left-radius: 1rem;
-        border-top-right-radius: 1rem;
-        border: 1px solid #2781c0;
+        display: block;
+        margin: 1rem auto;
+        margin-bottom: auto;
+        width: 90%;
+        height: 10rem;
+
 
     }
 
@@ -186,7 +188,6 @@ body {
     i {
         font-size: 1.5rem;
         transform: translateY(-56%);
-        border: 10px solid #daedfb;
         border-radius: 50%;
         width: 4rem;
         height: 4rem;
@@ -197,6 +198,7 @@ body {
         color: #2781c0;
         margin: auto;
 
+
         &:hover {
             background-color: #2781c0;
             color: #b4dffe;
@@ -205,7 +207,6 @@ body {
 
         @include mq-max(576px) {
             font-size: 1.5rem;
-            border: 8px solid #daedfb;
             width: 4rem;
             height: 4rem;
         }
@@ -229,8 +230,9 @@ body {
         margin-bottom: 2rem;
 
         @include mq-max(576px) {
-            margin: 0 1rem;
-            margin-top: 2.5rem;
+            margin-top: 2rem;
+
+
         }
 
         p {
@@ -252,16 +254,17 @@ body {
     .card-footer {
         display: flex;
         justify-content: space-around;
-        background-color: #b4dffe;
-        margin-top: 1.4rem;
-        border-bottom-left-radius: 1rem;
-        border-bottom-right-radius: 1rem;
+        background-color: #2781c0;
+        margin-top: 3.5rem;
 
         a {
-            padding: 0.75rem;
+            padding: 0.7rem;
             text-decoration: none;
-            color: black;
+            color: white;
 
+            @include mq-max(576px) {
+                padding: 0.6rem;
+            }
         }
     }
 
