--- a/sass/main.scss
+++ b/sass/main.scss
@@ -158,19 +158,28 @@ body {
 
     .button {
         margin-top: 3rem;
+        display: flex;
+        column-gap: 1rem;
+
+        @include mq-max(576px) {
+            justify-content: space-evenly;
+        }
 
         .hire {
-            border: 5px solid $p-color;
+            border: 3px solid $p-color;
             color: $p-color;
-            padding: 0.75rem 1.5rem;
+            padding: 0.5rem 1.25rem;
             text-decoration: none;
             font-size: 1.5rem;
             cursor: pointer;
+            border-radius: 10px;
         }
 
-        @include mq-max(976px) {
-            margin-top: 3rem;
+        .resume {
+            background-color: $p-color;
+            color: #daedfb;
         }
+
 
         @include mq-max(576px) {
 
